--- a/contracts/package.json
+++ b/contracts/package.json
@@ -7,7 +7,8 @@
     "chai": "^4.3.4",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.2",
-    "hardhat": "^2.7.0"
+    "hardhat": "^2.7.0",
+    "hardhat-gas-reporter": "^1.0.6"
   },
   "dependencies": {
     "@openzeppelin/contracts-upgradeable": "^4.4.0"
