Implemented logic (lock-in ether until release)
0.01 Ether will be locked-in, until the app is released. This logic can be changed, the smart contract is upgradable.

--- a/contracts/package.json
+++ b/contracts/package.json
@@ -11,6 +11,7 @@
     "hardhat-gas-reporter": "^1.0.6"
   },
   "dependencies": {
-    "@openzeppelin/contracts-upgradeable": "^4.4.0"
+    "@openzeppelin/contracts-upgradeable": "^4.4.0",
+    "dotenv": "^10.0.0"
   }
 }
