--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,10 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id("com.apollographql.apollo").version("$apollo_version")
 }
+
+//apply plugin: "com.apollographql.apollo"
 
 android {
     compileSdk 31
@@ -61,9 +64,16 @@ dependencies {
     implementation 'com.joaquimverges.helium:helium-core-android:0.8.0'
     implementation 'com.joaquimverges.helium:helium-compose:0.8.0'
     implementation 'io.coil-kt:coil-compose:1.4.0'
+    implementation("com.apollographql.apollo:apollo-runtime:$apollo_version")
+    implementation("com.apollographql.apollo:apollo-coroutines-support:$apollo_version")
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
+}
+
+apollo {
+    generateKotlinModels.set(true)
 }
