--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 buildscript {
     ext {
         compose_version = '1.0.5'
+        apollo_version = '2.5.11'
     }
     repositories {
         google()
