--- a/app/src/main/graphql/org/ethereum/dappstore/.graphqlconfig
+++ b/app/src/main/graphql/org/ethereum/dappstore/.graphqlconfig
@@ -4,7 +4,7 @@
   "extensions": {
     "endpoints": {
       "Default GraphQL Endpoint": {
-        "url": "https://api.studio.thegraph.com/query/16024/rinkebydappstoretest/0.0.4",
+        "url": "https://api.thegraph.com/subgraphs/name/markusbug/dappstore-rinkeby",
         "headers": {
           "user-agent": "JS GraphQL"
         },
