Updated contracts and subgraph

--- a/contracts/dappstoresubgraph/abis/DAppStore.json
+++ b/contracts/dappstoresubgraph/abis/DAppStore.json
@@ -44,6 +44,19 @@
 				"internalType": "uint256",
 				"name": "appID",
 				"type": "uint256"
+			}
+		],
+		"name": "ReleaseApp",
+		"type": "event"
+	},
+	{
+		"anonymous": false,
+		"inputs": [
+			{
+				"indexed": false,
+				"internalType": "uint256",
+				"name": "appID",
+				"type": "uint256"
 			},
 			{
 				"indexed": false,
