--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -24,8 +24,18 @@ jobs:
       run: chmod +x gradlew
     - name: Build Debug APK with Gradle
       run: ./gradlew assembleDebug
-    - name: Publish APK
+    - name: Publish System-App APK
       uses: actions/upload-artifact@master
       with:
-        name: dappstore_debug.apk
+        name: dappstore_systemapp_debug.apk
         path: app/build/outputs/apk/debug/app-debug.apk
+    - name: Change to user-app (without system privileges)
+      run: sed -i '5d' app/src/main/AndroidManifest.xml
+    - name: Build Debug APK with Gradle
+      run: ./gradlew assembleDebug
+    - name: Publish User-App APK
+      uses: actions/upload-artifact@master
+      with:
+        name: dappstore_userapp_debug.apk
+        path: app/build/outputs/apk/debug/app-debug.apk
+    
