--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -22,17 +22,15 @@ jobs:
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
-    - name: Build Debug APK with Gradle
-      run: ./gradlew assembleDebug
+    - name: Build System-App APK with Gradle
+      run: ./gradlew assembleSystemDebug
     - name: Publish System-App APK
       uses: actions/upload-artifact@master
       with:
         name: dappstore_systemapp_debug.apk
         path: app/build/outputs/apk/debug/app-debug.apk
-    - name: Change to user-app (without system privileges)
-      run: sed -i '5d' app/src/main/AndroidManifest.xml
-    - name: Build Debug APK with Gradle
-      run: ./gradlew assembleDebug
+    - name: Build Regular APK with Gradle
+      run: ./gradlew assembleRegularDebug
     - name: Publish User-App APK
       uses: actions/upload-artifact@master
       with:
