--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,7 @@ dependencies {
     implementation "com.apollographql.apollo:apollo-runtime:$apollo_version"
     implementation "com.apollographql.apollo:apollo-coroutines-support:$apollo_version"
     implementation 'com.github.ligi:ipfs-api-kotlin:0.15'
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0"
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
